--- a/Templates/atualizar.html
+++ b/Templates/atualizar.html
@@ -1,62 +1,80 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="static/css/bootstrap.min.css">
-		
-		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="static/css/bootstrap-theme.min.css">
+<head>
+	<title>Python app</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+</head>
 
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="static/js/bootstrap.min.js"></script>
-
-	</head>
-	<body>
+<body>
+	<div class="container">
 		<div class="page-header">
 			<h1>Atualizar Cliente</h1>
 		</div>
-		<div class="panel-body container">
+		<div class="panel-body">
 			<form class="navbar-form navbar-left" method="POST" action="">
 				<table>
-						<tr>
-							<td>Nome:</td>
-							<td><input type="text" class="form-control" name="nome" value="{{ pessoa.nome }}"></td>
-						</tr>
-						<tr>
-							<td>Rua:</td>
-							<td><input type="text" class="form-control" name="rua" value="{{ pessoa.rua }}"></td>
-						</tr>
-						<tr>
-							<td>Número:</td>
-							<td><input type="text" class="form-control" name="numero" value="{{ pessoa.numero }}"></td>
-						</tr>
-						<tr>
-							<td>Bairro:</td>
-							<td><input type="text" class="form-control" name="bairro" value="{{ pessoa.bairro }}"></td>
-						</tr>
-						<tr>
-							<td>Cidade:</td>
-							<td><input type="text" class="form-control" name="cidade" value="{{ pessoa.cidade }}"></td>
-						</tr>
-						<tr>
-							<td>Estado:</td>
-							<td><input type="text" class="form-control" name="estado" value="{{ pessoa.estado }}"></td>
-						</tr>
-						<tr>
-							<td>Telefone:</td>
-							<td><input type="text" class="form-control" name="fone" value="{{ pessoa.fone }}"></td>
-						</tr>
-						<tr>
-							<td>E-mail:</td>
-							<td><input type="text" class="form-control" name="email" value="{{ pessoa.email }}"></td>
-						</tr>
-					</table><br>
-				<input type="submit" class="btn btn-primary btn-lg" value="Atualizar">
-				<a href="{{ url_for('lista') }}"><input type="button" class="btn btn-primary btn-lg" value="Voltar"></a>
+					<tr>
+						<td>Nome:</td>
+						<td>
+							<input type="text" class="form-control" name="nome" value="{{ pessoa.nome }}">
+						</td>
+					</tr>
+					<tr>
+						<td>Rua:</td>
+						<td>
+							<input type="text" class="form-control" name="rua" value="{{ pessoa.rua }}">
+						</td>
+					</tr>
+					<tr>
+						<td>Número:</td>
+						<td>
+							<input type="text" class="form-control" name="numero" value="{{ pessoa.numero }}">
+						</td>
+					</tr>
+					<tr>
+						<td>Bairro:</td>
+						<td>
+							<input type="text" class="form-control" name="bairro" value="{{ pessoa.bairro }}">
+						</td>
+					</tr>
+					<tr>
+						<td>Cidade:</td>
+						<td>
+							<input type="text" class="form-control" name="cidade" value="{{ pessoa.cidade }}">
+						</td>
+					</tr>
+					<tr>
+						<td>Estado:</td>
+						<td>
+							<input type="text" class="form-control" name="estado" value="{{ pessoa.estado }}">
+						</td>
+					</tr>
+					<tr>
+						<td>Telefone:</td>
+						<td>
+							<input type="text" class="form-control" name="fone" value="{{ pessoa.fone }}">
+						</td>
+					</tr>
+					<tr>
+						<td>E-mail:</td>
+						<td>
+							<input type="text" class="form-control" name="email" value="{{ pessoa.email }}">
+						</td>
+					</tr>
+				</table>
+				<br>
+				<input type="submit" class="btn btn-primary" value="Atualizar">
+				<a href="{{ url_for('lista') }}">
+					<input type="button" class="btn btn-primary" value="Voltar">
+				</a>
 			</form>
 		</div>
-	</body>
+	</div>
+
+	<script src="static/js/bootstrap.min.js"></script>
+
+</body>
+
 </html>
