--- a/Templates/cadastro.html
+++ b/Templates/cadastro.html
@@ -2,87 +2,85 @@
 <html>
 
 <head>
+	<title>Python app</title>
 	<meta charset="UTF-8">
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="static/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
+</head>
 
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="static/css/bootstrap-theme.min.css">
+<body>
+	<div class="container">
+		<div class="page-header">
+			<h1>Cadastrar Cliente</h1>
+		</div>
+		<div class="panel-body">
+			<form class="navbar-form navbar-left" action="{{ url_for('cadastro') }}" method="POST">
+				<table>
+					<tr>
+						<td>Nome:</td>
+						<td>
+							<input type="text" class="form-control" name="nome">
+						</td>
+					</tr>
+					<tr>
+						<td>Rua:</td>
+						<td>
+							<input type="text" class="form-control" name="rua">
+						</td>
+					</tr>
+					<tr>
+						<td>Número:</td>
+						<td>
+							<input type="text" class="form-control" name="numero">
+						</td>
+					</tr>
+					<tr>
+						<td>Bairro:</td>
+						<td>
+							<input type="text" class="form-control" name="bairro">
+						</td>
+					</tr>
+					<tr>
+						<td>Cidade:</td>
+						<td>
+							<input type="text" class="form-control" name="cidade">
+						</td>
+					</tr>
+					<tr>
+						<td>Estado:</td>
+						<td>
+							<input type="text" class="form-control" name="estado">
+						</td>
+					</tr>
+					<tr>
+						<td>Telefone:</td>
+						<td>
+							<input type="text" class="form-control" name="fone">
+						</td>
+					</tr>
+					<tr>
+						<td>CPF:</td>
+						<td>
+							<input type="text" class="form-control" name="cpf">
+						</td>
+					</tr>
+					<tr>
+						<td>Email:</td>
+						<td>
+							<input type="text" class="form-control" name="email">
+						</td>
+					</tr>
+				</table>
+				<br>
+				<input type="submit" class="btn btn-primary" value="Salvar Cadastro" />
+				<a href="{{ url_for('home') }}">
+					<input type="button" class="btn btn-primary" value="Voltar">
+				</a>
+			</form>
+		</div>
+	</div>
 
-	<!-- Latest compiled and minified JavaScript -->
 	<script src="static/js/bootstrap.min.js"></script>
 
-	<body>
-		<div class="container">
-			<div class="page-header">
-				<h1>Cadastrar Cliente</h1>
-			</div>
-			<div class="panel-body">
-				<form class="navbar-form navbar-left" action="{{ url_for('cadastro') }}" method="POST">
-					<table>
-						<tr>
-							<td>Nome:</td>
-							<td>
-								<input type="text" class="form-control" name="nome">
-							</td>
-						</tr>
-						<tr>
-							<td>Rua:</td>
-							<td>
-								<input type="text" class="form-control" name="rua">
-							</td>
-						</tr>
-						<tr>
-							<td>Número:</td>
-							<td>
-								<input type="text" class="form-control" name="numero">
-							</td>
-						</tr>
-						<tr>
-							<td>Bairro:</td>
-							<td>
-								<input type="text" class="form-control" name="bairro">
-							</td>
-						</tr>
-						<tr>
-							<td>Cidade:</td>
-							<td>
-								<input type="text" class="form-control" name="cidade">
-							</td>
-						</tr>
-						<tr>
-							<td>Estado:</td>
-							<td>
-								<input type="text" class="form-control" name="estado">
-							</td>
-						</tr>
-						<tr>
-							<td>Telefone:</td>
-							<td>
-								<input type="text" class="form-control" name="fone">
-							</td>
-						</tr>
-						<tr>
-							<td>CPF:</td>
-							<td>
-								<input type="text" class="form-control" name="cpf">
-							</td>
-						</tr>
-						<tr>
-							<td>Email:</td>
-							<td>
-								<input type="text" class="form-control" name="email">
-							</td>
-						</tr>
-					</table>
-					<br>
-					<input type="submit" class="btn btn-primary btn-lg" value="Salvar Cadastro" />
-					<a href="{{ url_for('home') }}">
-						<input type="button" class="btn btn-primary btn-lg" value="Voltar">
-					</a>
-				</form>
-			</div>
-		</div>
-	</body>
+</body>
 
 </html>
