--- a/Templates/index.html
+++ b/Templates/index.html
@@ -2,15 +2,9 @@
 <html>
 
 <head>
+	<title>Python app</title>
 	<meta charset="UTF-8">
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="static/css/bootstrap.min.css">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="static/css/bootstrap-theme.min.css">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="static/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -20,14 +14,17 @@
 		</div>
 		<div class="btn-group">
 			<a href="{{ url_for('cadastrar') }}">
-				<input type="button" class="btn btn-primary btn-lg" value="Cadastro de Clientes">
+				<input type="button" class="btn btn-primary" value="Cadastro de Clientes">
 			</a>
 
 			<a href="{{ url_for('lista') }}">
-				<input type="button" class="btn btn-primary btn-lg" value="Lista de Clientes">
+				<input type="button" class="btn btn-primary" value="Lista de Clientes">
 			</a>
 		</div>
 	</div>
+
+	<script src="static/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
